--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "invoice-app -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://AdanFT.github.io/invoice"
+  "homepage": "https://AdanFT.github.io/invoice",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
